# PYTHON

./: README.md  best_practices.md  links.md  snippets.py
01_basics/: regular_expressions.py
01_basics/collections/: comprehensions.py  tuples.py
01_basics/control_flow/: error_handling.py  errors_exceptions.py  for.py  if.py  while.py
01_basics/data_structures/: arrays.py  hash_tables.py  (+3 more)
01_foundations/: python_installation.md
03_packages_and_dependencies/: tooling.md
03_packages_and_environments/: package_managers.md  package_tools.md  requirements_files.md  venv_tools.md
03_packages_and_environments/packaging_and_distribution/: packaging_tools.md  publish_to_PyPi.md  pyproject.toml  setuptools.py
04_testing/: assertions_copy.py  debug_tools.py  mocking.py  testing.md
05_toolkits_and_ecosystem/: cross_platform.py  env_variables.py  kubernetes.py
06_security/: 2FA.md  JWT.md  OAuth.md  SSO.md  md.md
06_web_development/: django.md  fastapi.md  flask.md
07_data_and_ml/: data_visualization.py  file_formats.py
OOP/: classes_and_objects.py  inheritance.py
concurrency_parallelism/: asynchronous_programming.py  multiprocessing.py
control_flow/: for_loop.py
data_structures/: dictionaries.py  lists.py
debugging/: debugging.py
file_handling/: reading_files.py
functions/: return_values.py
leetcode/: [1365]how_many_numbers_are_smaller.py  [1]two_sum.py  approach.md
operators/: arithmetic.py  comparison.py  identity.py
patterns/: prefix_sum.py  two_pointer.py
practice/: approach.md
syntax/: comments.py  indentation.md
test/: linting.md
(+94 files in other folders)
